--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -7,13 +7,18 @@
 <body>
 	<h1>Welcome to</h1>
 	<h1 id="red">onX Support</h1>
-	<div id="category">
+	<div class="category">
 		<img src="images/mobile.png" title="Mobile" alt="Mobile">
 		<p>Mobile</p>
+	</div>
+	<div class="category">
 		<img src="images/computer.png" title="Computer" alt="Computer">
 		<p>Computer</p>
+	</div>
+	<div class="category">
 		<img src="images/gps.png" title="GPS" alt="GPS">
 		<p>GPS</p>
+	<div class="category">
 		<img src="images/accountmanagement.png" title="Account Management" alt="Account Management" class="center">
 		<p>Account Management</p>
 	</div>
