--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav class="clearfix">
-		<div class="navbar" id="menu">
+		<div class="navbar">
 			<img src="images/blackmenu.png" title="Logo" alt="onX">
 		</div>
 		<div class="navbar">
